--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --font-family: "Lato", sans-serif;
   --vertical-line: rgb(134, 133, 133);
   --color-light-purple: rgb(133, 126, 231);
+  --color-dark-purple: rgb(69, 65, 121);
 }
 /* Fonts -------------------------------------- */
 .bold {
@@ -46,15 +47,16 @@ header h1 {
   display: flex;
   align-items: center;
   padding: 1em;
+  justify-content: space-between;
 }
 
 .bell-icon-container {
-  margin: 0 auto;
-  width: 15%;
-  padding-left: 20px;
+  margin-left: auto;
+  margin-right: 15px;
 }
 
 .bell-icon {
+  width: 30px;
   fill: white;
 }
 
@@ -68,7 +70,6 @@ header img {
   border-left: 1px solid rgb(190, 188, 188);
   height: 40px;
   margin-right: 5px;
-  margin-left: 10px;
 }
 
 .header-student {
@@ -79,12 +80,29 @@ header img {
 .header-student p {
   font-size: 10px;
 }
+
+@media screen and (min-width: 768px) {
+  .header-student p {
+    font-size: 16px;
+  }
+}
 /* End Header -------------------------------------- */
+
+/* Nav -------------------------------------- */
 nav {
   grid-area: navigation;
-  background-color: purple;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-dark-purple);
+  padding: 10px 50px;
 }
-/*
+
+nav img {
+  width: 30px;
+  filter: invert(1);
+}
+
 main {
   grid-area: main;
   background-color: pink;
@@ -102,6 +120,18 @@ main {
     grid-template-areas:
       "header header"
       "navigation main";
+  }
+
+  nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: flex-start;
+    padding: 0;
+  }
+
+  nav a {
+    padding-top: 20px;
   }
 
   main {
@@ -128,6 +158,10 @@ main {
   }
 }
 
+.traffic-nav {
+  list-style-type: none;
+}
+/*
 @media screen and (min-width: 1024px) {
   .social-stats {
     grid-column: 1 / span 2;
