--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,11 @@
   --vertical-line: rgb(134, 133, 133);
   --color-light-purple: rgb(133, 126, 231);
   --color-dark-purple: rgb(69, 65, 121);
+  --color-light-green: rgb(118, 201, 118);
+  --color-light-gray-line: rgb(216, 214, 214);
+  --color-light-gray-background: rgb(243, 242, 242);
 }
+
 /* Fonts -------------------------------------- */
 .bold {
   font-weight: 500;
@@ -32,6 +36,10 @@
   grid-template-areas: "header" "navigation" "main";
 }
 
+.widget-container-full,
+.wdiget-container-half {
+  width: 95vw;
+}
 /* Header -------------------------------------- */
 header {
   grid-area: header;
@@ -102,17 +110,236 @@ nav img {
   width: 30px;
   filter: invert(1);
 }
+/* End Nav -------------------------------------- */
 
+/* Dashboard Header -------------------------------------- */
 main {
   grid-area: main;
-  background-color: pink;
+  background-color: white;
+}
+
+.main-header {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1em;
+}
+
+.container {
+  width: 95%;
+  margin: 0 auto;
   display: grid;
 }
 
-.widget-container-full,
-.wdiget-container-half {
-  width: 95vw;
+.headline {
+  font-weight: 300;
+  font-size: 22px;
 }
+
+.alert-banner {
+  background-color: var(--color-light-purple);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  width: 90%;
+  font-size: 15px;
+  font-weight: 200;
+  border-radius: 6px;
+  height: 45px;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+.alert-banner p {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.alert-banner-close {
+  cursor: pointer;
+}
+
+.alert-banner-close:hover {
+  transform: scale(1.3);
+}
+
+/* End Dashboard Header -------------------------------------- */
+
+/* Traffic -------------------------------------- */
+.uppercase {
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+.traffic-nav {
+  display: flex;
+  justify-content: center;
+  justify-content: space-around;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  list-style-type: none;
+  align-items: center;
+}
+
+.traffic {
+  border-bottom: 2px solid var(--color-light-gray-line);
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+}
+
+.traffic-nav li {
+  color: black;
+}
+
+.traffic-nav li:first-child {
+  background-color: var(--color-light-green);
+  color: white;
+  padding: 0.5em;
+  border-radius: 16px;
+}
+
+/* End Traffic -------------------------------------- */
+/* DailyTraffic -------------------------------------- */
+
+.daily {
+  border-bottom: 2px solid var(--color-light-gray-line);
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+}
+
+.daily h3 {
+  padding-bottom: 50px;
+}
+
+/* End Daily Traffic ------------------------------------- */
+/* Mobile ------------------------------------------------ */
+.mobile-chart {
+  max-width: 200px;
+}
+
+/* Mobile ------------------------------------------------ */
+/* Social Stats ------------------------------------------------ */
+.social-stats {
+  border-bottom: 2px solid var(--color-light-gray-line);
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  max-width: 98%;
+}
+
+.social-stats h3 {
+  margin-top: 20px;
+}
+.social-image {
+  width: 30px;
+  margin-right: 10px;
+}
+
+.social-container {
+  background-color: var(--color-light-gray-background);
+  border: 1px solid var(--color-light-gray-line);
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1em;
+  height: 80px;
+}
+
+.social-text p:first-child {
+  color: var(--color-light-purple);
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+.social-text p:last-child {
+  font-size: 35px;
+  color: gray;
+  font-weight: 200;
+}
+.outer {
+  fill: white;
+}
+
+/* End Social Stats ------------------------------------------------ */
+/* New Members  ------------------------------------------------ */
+.members-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 20px;
+  font-weight: 200;
+  font-size: 14px;
+  border-bottom: 2px solid var(--color-light-gray-line);
+}
+
+.members-container img {
+  width: 50px;
+  border-radius: 50%;
+}
+
+.members-text a {
+  text-decoration: none;
+  color: var(--color-light-purple);
+}
+
+.members-text p:last-child {
+  margin-bottom: 15px;
+}
+
+.date {
+  padding-bottom: 15px;
+}
+/* End New Members  ------------------------------------------------ */
+/* Messaging  ------------------------------------------------ */
+
+.message,
+.settings {
+  margin-top: 15px;
+  border-bottom: 2px solid var(--color-light-gray-line);
+}
+
+.widget-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+input[type],
+textarea {
+  background-color: var(--color-light-gray-background);
+  border: 1px solid var(--color-light-gray-line);
+  border-radius: 6px;
+  height: 40px;
+  margin-bottom: 15px;
+}
+
+textarea {
+  height: 100px;
+}
+
+button {
+  background-color: var(--color-light-purple);
+  border: 1px solid var(--color-light-gray-line);
+  color: white;
+  text-transform: uppercase;
+  border-radius: 6px;
+  height: 40px;
+  margin-bottom: 15px;
+}
+
+/* End Messaging  ------------------------------------------------ */
+/* Settings ------------------------------------------------ */
+
+/* End Settings  ------------------------------------------------ */
+/* ------------------------------------------------------------ */
+/* ------------------------------------------------------------ */
+/* --------------------Media Queries---------------------------- */
+/* ------------------------------------------------------------ */
+/* ------------------------------------------------------------ */
 
 @media screen and (min-width: 768px) {
   .grid-container {
@@ -135,7 +362,7 @@ main {
   }
 
   main {
-    grid-template-columns: 50%;
+    grid-template-columns: 50% 1fr;
   }
 
   .traffic,
@@ -144,8 +371,8 @@ main {
   }
 
   .members,
-  .message,
   .activity,
+  .message,
   .settings {
     grid-column: 1 / span 2;
   }
@@ -156,12 +383,12 @@ main {
   .widget-container-half {
     width: 45vw;
   }
+
+  .traffic-nav {
+    justify-content: flex-end;
+  }
 }
 
-.traffic-nav {
-  list-style-type: none;
-}
-/*
 @media screen and (min-width: 1024px) {
   .social-stats {
     grid-column: 1 / span 2;
@@ -179,34 +406,3 @@ main {
     grid-column: 2 / span 1;
   }
 }
-
-.traffic {
-  background-color: green;
-}
-
-.daily {
-  background-color: var(--color-light-purple);
-}
-
-.mobile {
-  background-color: yellow;
-}
-
-.social-stats {
-  background-color: lightblue;
-}
-
-.members {
-  background-color: lightcoral;
-}
-
-.activity {
-  background-color: lightsteelblue;
-}
-
-.message {
-  background-color: lightyellow;
-}
-.settings {
-  background-color: lavenderblush;
-} */
