--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@
   padding: 0;
   margin: 0;
   font-family: var(--font-family);
-  width: 100%;
   overflow-x: hidden;
 }
 
@@ -45,8 +44,14 @@
 }
 
 .container {
-  width: 98%;
+  width: 95%;
   margin: 0 auto;
+}
+
+.bottom-line {
+  width: 100%;
+  height: 2px;
+  color: var(--color-light-gray-line);
 }
 /* Header -------------------------------------- */
 header {
@@ -62,27 +67,22 @@ header h1 {
 .header-container {
   display: flex;
   align-items: center;
-  padding: 1em;
-  justify-content: space-between;
-}
-
-.bell-icon-container {
-  margin-left: auto;
-  margin-right: 15px;
+  padding: 8px;
 }
 
 .bell-icon {
-  width: 30px;
+  width: 25px;
   fill: white;
+  position: relative;
 }
 
 .circle {
   fill: var(--color-light-green);
   position: relative;
   margin: 0 auto;
-  left: 55px;
-  top: 9px;
-  width: 35px;
+  left: 50px;
+  top: -2px;
+  width: 25px;
   z-index: 99;
   cursor: pointer;
 }
@@ -93,23 +93,27 @@ header h1 {
 }
 
 circle {
-  max-width: 10%;
+  max-width: 5%;
 }
+
 header img {
-  width: 40px;
+  width: 50px;
   border-radius: 50%;
-  margin-right: 10px;
+  position: relative;
 }
 
 .vertical {
   border-left: 1px solid rgb(190, 188, 188);
   height: 40px;
-  margin-right: 5px;
+  margin: 0;
 }
 
 .header-student {
   display: flex;
   align-items: center;
+  justify-content: space-around;
+  align-self: flex-start;
+  justify-content: flex-start;
 }
 
 .header-student p {
@@ -144,12 +148,27 @@ main {
 .main-header {
   display: flex;
   flex-direction: column;
-  margin-top: 1em;
 }
 
 .headline {
   font-weight: 300;
   font-size: 22px;
+  padding: 20px 0px 20px 0px;
+  margin-left: 20px;
+  width: 200px;
+}
+
+.dash-container {
+  display: flex;
+  padding-bottom: 10px;
+}
+
+.rect {
+  background-color: var(--color-light-gray-background);
+  height: 60px;
+  width: 100%;
+  border-left: 1px solid var(--color-light-gray-line);
+  border-bottom: 1px solid var(--color-light-gray-line);
 }
 
 .alert-banner {
@@ -159,7 +178,7 @@ main {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  width: 100%;
+  width: 90%;
   font-size: 15px;
   font-weight: 200;
   border-radius: 6px;
@@ -182,6 +201,9 @@ main {
 /* End Dashboard Header -------------------------------------- */
 
 /* Traffic -------------------------------------- */
+.traffic-header {
+  margin-top: 20px;
+}
 .uppercase {
   text-transform: uppercase;
   font-size: 14px;
@@ -192,22 +214,21 @@ main {
 .traffic-nav {
   display: flex;
   justify-content: center;
-  justify-content: space-around;
   margin-top: 1em;
   margin-bottom: 2em;
   list-style-type: none;
   align-items: center;
+  width: 100%;
+  justify-content: space-around;
 }
 
 .traffic {
-  border-bottom: 2px solid var(--color-light-gray-line);
   padding-bottom: 15px;
   margin-bottom: 15px;
 }
 
 .traffic-nav li {
   color: black;
-  margin: 15px;
 }
 
 .traffic-nav li:first-child {
@@ -215,13 +236,13 @@ main {
   color: white;
   padding: 0.5em;
   border-radius: 16px;
+  max-width: 80px;
 }
 
 /* End Traffic -------------------------------------- */
 /* DailyTraffic -------------------------------------- */
 
 .daily {
-  border-bottom: 2px solid var(--color-light-gray-line);
   padding-bottom: 20px;
   margin-bottom: 15px;
 }
@@ -239,7 +260,6 @@ main {
 /* Mobile ------------------------------------------------ */
 /* Social Stats ------------------------------------------------ */
 .social-stats {
-  border-bottom: 2px solid var(--color-light-gray-line);
   padding-bottom: 20px;
   margin-bottom: 15px;
   max-width: 98%;
@@ -296,7 +316,6 @@ main {
   margin-top: 20px;
   font-weight: 200;
   font-size: 14px;
-  border-bottom: 2px solid var(--color-light-gray-line);
 }
 
 .members-container img {
