--- a/css/styles.css
+++ b/css/styles.css
@@ -48,10 +48,12 @@
   margin: 0 auto;
 }
 
-.bottom-line {
+.bottom-line,
+.top-line {
   width: 100%;
   height: 2px;
-  color: var(--color-light-gray-line);
+  border: none;
+  background-color: var(--color-light-gray-line);
 }
 /* Header -------------------------------------- */
 header {
@@ -68,23 +70,26 @@ header h1 {
   display: flex;
   align-items: center;
   padding: 8px;
+  justify-content: space-around;
+}
+
+.bell-icon-container {
+  margin-left: auto;
+  margin-right: 10px;
 }
 
 .bell-icon {
-  width: 25px;
+  width: 30px;
   fill: white;
-  position: relative;
 }
 
 .circle {
   fill: var(--color-light-green);
   position: relative;
-  margin: 0 auto;
-  left: 50px;
-  top: -2px;
   width: 25px;
   z-index: 99;
   cursor: pointer;
+  left: 20px;
 }
 
 .bell-icon:hover {
@@ -97,27 +102,26 @@ circle {
 }
 
 header img {
-  width: 50px;
+  width: 40px;
   border-radius: 50%;
   position: relative;
+  margin-right: 5px;
 }
 
 .vertical {
   border-left: 1px solid rgb(190, 188, 188);
   height: 40px;
-  margin: 0;
+  margin-right: 10px;
 }
 
 .header-student {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  align-self: flex-start;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .header-student p {
-  font-size: 10px;
+  font-size: 13px;
 }
 
 /* End Header -------------------------------------- */
@@ -178,7 +182,6 @@ main {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  width: 90%;
   font-size: 15px;
   font-weight: 200;
   border-radius: 6px;
@@ -209,6 +212,8 @@ main {
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 1px;
+  margin-top: 20px;
+  padding-right: 10px;
 }
 
 .traffic-nav {
@@ -265,9 +270,6 @@ main {
   max-width: 98%;
 }
 
-.social-stats h3 {
-  margin-top: 20px;
-}
 .social-image {
   width: 30px;
   margin-right: 10px;
@@ -276,6 +278,10 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.purple-circle {
+  fill: var(--color-light-purple);
 }
 
 .social-container {
@@ -287,8 +293,9 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 300px;
   max-width: 450px;
+  min-width: 180px;
+  width: 100%;
 }
 
 .social-text p:first-child {
@@ -335,13 +342,21 @@ main {
 .date {
   padding-bottom: 15px;
 }
+
+.arrow {
+  display: none;
+}
+
 /* End New Members  ------------------------------------------------ */
 /* Messaging  ------------------------------------------------ */
 
-.message,
-.settings {
-  margin-top: 15px;
-  border-bottom: 2px solid var(--color-light-gray-line);
+.message h3,
+.settings h3 {
+  margin-bottom: 20px;
+}
+
+.settings p {
+  font-weight: 200;
 }
 
 .widget-container {
@@ -365,16 +380,6 @@ textarea {
   height: 100px;
 }
 
-.button-primary {
-  background-color: var(--color-light-purple);
-  border: 1px solid var(--color-light-gray-line);
-  color: white;
-  text-transform: uppercase;
-  border-radius: 6px;
-  height: 40px;
-  margin-bottom: 15px;
-}
-
 input::placeholder,
 textarea::placeholder {
   padding-left: 10px;
@@ -383,6 +388,87 @@ textarea::placeholder {
   font-weight: 200;
 }
 
+select {
+  color: rgb(185, 184, 184);
+}
+
+.toggle-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.toggle2-container {
+  display: flex;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 90px;
+  height: 35px;
+  background-color: #eee;
+  border: 2px solid gray;
+  border-radius: 20px;
+  margin-left: auto;
+  margin-bottom: 20px;
+}
+
+.switch::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border: 2px solid gray;
+  border-radius: 50%;
+  background-color: white;
+  top: 1px;
+  left: 1px;
+  transition: all 0.3s;
+}
+
+.checkbox:checked + .switch::after {
+  left: 55px;
+}
+
+.checkbox:checked + .switch {
+  background-color: #7983ff;
+}
+
+.checkbox {
+  display: none;
+}
+
+.form-field {
+  width: 100%;
+}
+
+.settings-button {
+  display: flex;
+  justify-content: center;
+}
+
+.button-primary,
+.button-disabled {
+  background-color: var(--color-light-purple);
+  border: 1px solid var(--color-light-gray-line);
+  color: white;
+  text-transform: uppercase;
+  border-radius: 6px;
+  height: 40px;
+  margin-bottom: 15px;
+  width: 100%;
+  height: 50px;
+  margin: 5px 5px 50px 5px;
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+}
+
+.button-disabled {
+  background-color: gray;
+  color: white;
+}
 /* End Messaging  ------------------------------------------------ */
 /* Settings ------------------------------------------------ */
 
@@ -405,6 +491,9 @@ textarea::placeholder {
     font-size: 16px;
   }
 
+  .bottom-line {
+    width: 200%;
+  }
   nav {
     display: flex;
     flex-direction: column;
@@ -420,14 +509,16 @@ textarea::placeholder {
   main {
     grid-template-columns: 50% 1fr;
   }
+  /* Traffic Container ------------------------------------------------------------- */
+  .traffic-header {
+    display: flex;
+  }
+
   /* Social-stats ------------------------------------------------------------- */
   .social-wrapper {
     flex-direction: row;
   }
 
-  .social-container {
-    width: 100px;
-  }
   /* End Social-states ------------------------------------------------------ */
   /* Members------------------------------------------------------- */
   .members-container {
@@ -447,24 +538,44 @@ textarea::placeholder {
   .members-container img {
     width: 60px;
   }
-  .date {
+  .date,
+  .arrow {
     padding-bottom: 15px;
     align-self: flex-end;
     justify-self: flex-end;
     margin-left: auto;
   }
+
+  .arrow {
+    display: block;
+    font-size: 30px;
+    color: rgb(167, 163, 163);
+  }
   /* End Members------------------------------------------------------- */
   .traffic,
   .social-stats,
   .main-header {
-    grid-column: 1 / span 2;
+    grid-column: 1 / 3;
   }
 
   .members,
   .activity,
   .message,
   .settings {
-    grid-column: 1 / span 2;
+    grid-column: 1 / 3;
+  }
+
+  .mobile-line {
+    display: none;
+  }
+
+  .daily {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+  .mobile {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
   }
 
   .widget-container-full {
@@ -478,22 +589,45 @@ textarea::placeholder {
   .traffic-nav {
     justify-content: flex-end;
   }
+
+  .traffic-nav li {
+    margin: 5px;
+  }
+
+  .toggle-container {
+    flex-direction: column;
+  }
+
+  input[type],
+  label[for] {
+    margin-right: 60%;
+  }
 }
 
 @media screen and (min-width: 1024px) {
+  label[for] {
+    margin-right: 200px;
+  }
   .social-stats {
     grid-column: 1 / span 2;
   }
-
-  .members,
-  .daily,
-  .message {
-    grid-column: 1 / span 1;
+  .members {
+    grid-column: 1 / 2;
+    grid-row: 6 / 8;
   }
 
-  .mobile,
-  .activity,
+  .activity {
+    grid-column: 2 / 3;
+    grid-row: 6 / 8;
+  }
+
+  .message {
+    grid-column: 1 / 2;
+    grid-row: 8 / 11;
+  }
+
   .settings {
-    grid-column: 2 / span 1;
+    grid-column: 2 / 3;
+    grid-row: 8 / 11;
   }
 }
