--- a/css/styles.css
+++ b/css/styles.css
@@ -280,10 +280,6 @@ main {
   align-items: center;
 }
 
-.purple-circle {
-  fill: var(--color-light-purple);
-}
-
 .social-container {
   background-color: var(--color-light-gray-background);
   border: 1px solid var(--color-light-gray-line);
@@ -309,8 +305,19 @@ main {
   color: gray;
   font-weight: 200;
 }
+.social-image {
+  background-color: var(--color-light-purple);
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .outer {
   fill: white;
+  width: 20px;
+  height: 20px;
 }
 
 /* End Social Stats ------------------------------------------------ */
