--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,16 @@
   margin: 0 auto;
 }
 
-.bottom-line,
+.mobile-bottom-line,
 .top-line {
+  width: 95%;
+  height: 2px;
+  margin: 0 auto;
+  border: none;
+  background-color: var(--color-light-gray-line);
+}
+
+.bottom-line {
   width: 100%;
   height: 2px;
   border: none;
@@ -205,6 +213,10 @@ main {
 /* Traffic -------------------------------------- */
 .traffic-header {
   margin-top: 20px;
+}
+
+#traffic-chart {
+  margin-bottom: 2em;
 }
 .uppercase {
   text-transform: uppercase;
@@ -520,13 +532,9 @@ select {
     display: flex;
   }
 
-  .daily,
-  .mobile {
-    border-top: 2px solid var(--color-light-gray-line);
-  }
-
-  .daily {
-    border-right: 2px solid var(--color-light-gray-line);
+  .traffic {
+    padding-bottom: 0;
+    margin-bottom: 0;
   }
 
   .mobile {
@@ -619,6 +627,10 @@ select {
   input[type],
   label[for] {
     margin-right: 60%;
+  }
+
+  .traffic-bottom-line {
+    display: none;
   }
 }
 
