--- a/css/styles.css
+++ b/css/styles.css
@@ -379,6 +379,30 @@ main {
   margin: 0 auto;
 }
 
+select:hover,
+select:focus {
+  outline: none;
+  cursor: pointer;
+}
+
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  padding-left: 10px;
+  background-image: linear-gradient(
+      45deg,
+      transparent 50%,
+      var(--color-light-purple) 50%
+    ),
+    linear-gradient(135deg, var(--color-light-purple) 50%, transparent 50%),
+    linear-gradient(to right, transparent, transparent);
+  background-position: calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px), 100% 0;
+  background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
+  background-repeat: no-repeat;
+}
+
 input[type="text"],
 textarea,
 select {
@@ -393,7 +417,6 @@ textarea {
   height: 100px;
 }
 
-input[type="text"],
 input::placeholder,
 textarea::placeholder {
   padding-left: 10px;
@@ -418,6 +441,7 @@ input[type="checkbox"] {
 input:checked[type="checkbox"] {
   background: var(--color-light-purple);
   border: 2px solid rgb(172, 167, 167);
+  cursor: pointer;
 }
 
 input[type="checkbox"]::before {
